updating broken stuff

--- a/flask-mailroom/templates/create.jinja2
+++ b/flask-mailroom/templates/create.jinja2
@@ -7,7 +7,7 @@
 <form method="POST">
     <label for="name-input">Name:</label><input id="name-input" type="text" name="name"><br>
     <label for="amount-input">Donation:</label><input id="amount-input" type="text" name="amount"><br>
-    <input type="submit" value="Create Donation">
+    <input type="submit">
 </form>
 
 {% endblock content %}
